# cosmic-ext-applet-dict

./: .gitignore  .gitmodules  Cargo.toml  README.md  dev.cappsy.CosmicExtAppletDict.json  justfile
i18n/en/: cosmic_ext_applet_dict.ftl
resources/: app.desktop  app.metainfo.xml
resources/scripts/: dictionary-build.py
src/: app.rs  lib.rs
