[package]
name = "cosmic-ext-applet-dict"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-only"
description = "An English dictionary applet for the COSMIC desktop."
repository = "https://github.com/cappsyco/cosmic-ext-applet-dict"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
i18n-embed-fl = "0.10.0"
rust-embed = "8.5.0"
sqlite = "0.37.0"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]

[features]
flatpak = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
